--- a/web/templates/page.html
+++ b/web/templates/page.html
@@ -19,8 +19,5 @@
 </nav>
 {% endblock side %}
 {% block footer %}
-<p class="copyright">COPYRIGHT &copy; 2014 · ALL RIGHTS RESERVED · MADE BY SKIP
-<a href="#" id="totop" class="light">BACK TO TOP</a>
-</p>
-<p class="end center">{{ request.remote_addr }}</p>
+<p class="copyright">COPYRIGHT &copy; 2014 · ALL RIGHTS RESERVED · MADE BY SKIP <a href="#" id="totop" class="light">BACK TO TOP</a></p>
 {% endblock footer %}
