--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,9 +4,7 @@
 <meta charset="utf-8">
 {% block title %}<title>{{ title|default('NONE') }}</title>{% endblock title %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css')}}">
-<script src="{{ url_for('static', filename='jquery.js') }}"></script>
-{% block head %}
-{% endblock head %}
+{% block head %}{% endblock head %}
 </head>
 <body>
 <div class="wrapper">
@@ -17,8 +15,7 @@
         {% block content %}{% endblock content %}
     </div>
 </div>
-<div id="footer">
-    {% block footer %}{% endblock footer %}
-</div>
+<div id="footer">{% block footer %}{% endblock footer %}</div>
+{% block script %}{% endblock script %}
 </body>
 </html>
