--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 {% block title %}<title>{{ title|default('NONE') }}</title>{% endblock title %}
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css')}}">
 {% block head %}{% endblock head %}
 </head>
