--- a/web/templates/detail.html
+++ b/web/templates/detail.html
@@ -1,6 +1,6 @@
 {% extends "page.html" %}
 {% block content %}
-{% set frequency={0:'活跃',1:'使用',2:'占用',3:'离线',4:'废弃',5:'空闲'} %}
+{% set frequency={ 0:'活跃', 1:'使用', 2:'占用', 3:'离线', 4:'废弃', 5:'回收', 6:'' } %}
 <table id="detail" class="auto">
     <thead>
         <tr class="selectNone">
