--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTMl>
 <html>
 <head>
+    <meta name="renderer" content="webkit">
+    <meta name="force-rendering" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>>:登录</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='login.css') }}">
